[gd_scene load_steps=3 format=2]

[ext_resource path="res://systems/sound/sound/propagated_sound.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
resource_local_to_scene = true
radius = 100.0

[node name="PropagatedSound" type="AudioStreamPlayer3D"]
attenuation_model = 3
max_distance = 200.0
bus = "SFX"
script = ExtResource( 1 )
audio_collision_mask = 1

[node name="Area" type="Area" parent="."]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[connection signal="finished" from="." to="." method="_on_PropagatedSound_finished"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
